refactor : #20 - 좋아요 API 코드 리팩토링
- User, Post 객체 모두를 가져오지 않고 필요한 값만 가져올 수 있도록 수정